fix map too big

--- a/tournois/static/style.css
+++ b/tournois/static/style.css
@@ -7,7 +7,6 @@ body {
 }
 
 #map {
-  position: absolute;
   top: 0;
   bottom: 0;
   width: 100%;
